--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     <h3>section 2222</h3>
     <h3>section 1</h3>
     <h1>123</h1>
+
+    <footer style="background-color: #222; color: #fff; padding: 20px; text-align: center;">
+  <p>&copy; 2025 Ghori Brand. All rights reserved.</p>
+  <p>
+    <a href="#" style="color: #ddd; margin: 0 10px; text-decoration: none;">Home</a> |
+    <a href="#" style="color: #ddd; margin: 0 10px; text-decoration: none;">About</a> |
+    <a href="#" style="color: #ddd; margin: 0 10px; text-decoration: none;">Contact</a>
+  </p>
+</footer>
+
 </body>
 
 </html>
